--- a/app/src/main/res/layout/activity_detalle_mascota.xml
+++ b/app/src/main/res/layout/activity_detalle_mascota.xml
@@ -6,23 +6,27 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/drink_image"
-        android:layout_width="match_parent"
+        android:id="@+id/detalle_imagen"
+        android:layout_width="200dp"
         android:layout_height="200dp"
-        android:scaleType="centerInside" />
+        android:layout_gravity="center"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/drink_name"
+        android:id="@+id/detalle_nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:paddingTop="8dp"/>
+        android:layout_marginTop="16dp"
+        android:text="Nombre de la Mascota" />
 
     <TextView
-        android:id="@+id/drink_description"
+        android:id="@+id/detalle_descripcion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:paddingTop="4dp"/>
+        android:textSize="18sp"
+        android:layout_marginTop="8dp"
+        android:text="Descripción de la Mascota" />
+
 </LinearLayout>
